force-app/main/default/objects/Dealer_Scorecard__c/fields/xStore_for_POS__c.field-meta.xml
<CustomField>
    <fullName>xStore_for_POS__c</fullName>
    <description>10 indicates store is on xStore.  0 Indicates store is on other POS.</description>
    <formula>IF(
ISPICKVAL( Dealer__r.POS_System_Name__c , &apos;XStore - North America&apos;)
,10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>10 indicates store is on xStore.  0 Indicates store is on other POS.  Calculated from Account setting.</inlineHelpText>
    <label>xStore for POS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>