force-app/main/default/objects/Dealer_Scorecard__c/recordTypes/Dealer_Scorecard_Annual_Review.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Scorecard_Annual_Review</fullName>
    <active>true</active>
    <description>Annual Dealer Scorecard Review Record Type</description>
    <label>Dealer Scorecard - Annual Review</label>
</RecordType>