force-app/main/default/objects/Dealer_Scorecard__c/recordTypes/Dealer_Scorecard_Store_Buildout.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Scorecard_Store_Buildout</fullName>
    <active>true</active>
    <description>Dealer Scorecard for store build out or remodel</description>
    <label>Dealer Scorecard - Store Buildout</label>
</RecordType>